--- a/src/html/modules/accordion.hbs
+++ b/src/html/modules/accordion.hbs
@@ -9,7 +9,7 @@
   <div class="accordion__items">
     {{#each items}}
       <div class="accordion__item">
-        <button class="accordion__item-trigger"{{#if @first}} aria-expanded="true"{{/if}}>
+        <button class="accordion__item-trigger" aria-expanded="{{#if @first}}true{{else}}false{{/if}}" id="trigger-{{@index}}" aria-controls="panel-{{@index}}">
           <h3 class="accordion__item-title">{{title}}</h3>
           <span class="accordion__item-icon">
             {{> svg name="minus" className="accordion__item-icon-minus"}}
@@ -17,7 +17,7 @@
           </span>
         </button>
 
-        <div role="region" class="accordion__item-panel">
+        <div id="panel-{{@index}}" role="region" aria-labelledby="trigger-{{@index}}" class="accordion__item-panel">
           <div class="accordion__item-content">
             <h4 class="accordion__item-heading">{{heading}}</h4>
             <div class="rtf accordion__item-description">
