--- a/src/scss/core/_global.scss
+++ b/src/scss/core/_global.scss
@@ -1,7 +1,8 @@
-@use 'sass-mq/mq';
+@use "sass-mq/mq";
 
 .container {
-  margin: 0 auto;
+  margin-block: 0;
+  margin-inline: auto;
   max-inline-size: var(--container-max-width);
   padding-inline: var(--container-padding);
 }
@@ -13,8 +14,10 @@
 
 .focus-visible {
   outline: solid 2px var(--focus);
+  outline-offset: 3px;
 
   &:-moz-focusring {
     outline: solid 2px var(--focus);
+    outline-offset: 3px;
   }
 }
