--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 @use "sass-mq/mq";
 
 :root {
-  --primary-font: "Questrial", sans-serif;
+  --primary-font: "Arial", sans-serif;
   --container-max-width: 1840px;
   --container-padding: 20px;
   --module-spacing: 60px;
