--- a/src/html/modules/accordion.hbs
+++ b/src/html/modules/accordion.hbs
@@ -23,6 +23,11 @@
             <div class="rtf accordion__item-description">
               <p>{{{copy}}}</p>
             </div>
+            {{#with cta}}
+            <div class="buttons-row">
+            {{>button}}
+            </div>
+            {{/with}}
           </div>
         </div>
       </div>
