--- a/src/scss/core/_typography.scss
+++ b/src/scss/core/_typography.scss
@@ -1,7 +1,113 @@
 //Typography
+@use "sass-mq" as mq;
+@use "sass-rem" as rem;
 
 body {
   font-family: var(--primary-font);
-  font-size: 18px;
+  font-size: rem.convert(18px);
   line-height: 1.78;
+}
+
+h1 {
+  font-size: rem.convert(34px);
+  font-weight: 700;
+  line-height: 1.12;
+  margin-block-end: 20px;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(50px);
+    line-height: 1.08;
+    margin-block-end: 30px;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(54px);
+    line-height: 1.07;
+  }
+}
+
+h2 {
+  font-size: rem.convert(32px);
+  font-weight: 700;
+  line-height: 1.13;
+  margin-block-end: 10px;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(42px);
+    line-height: 1.1;
+    margin-block-end: 20px;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(45px);
+    line-height: 1.09;
+  }
+}
+
+h3 {
+  font-size: rem.convert(28px);
+  font-weight: 700;
+  line-height: 1.14;
+  margin-block-end: 10px;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(35px);
+    line-height: 1.11;
+    margin-block-end: 20px;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(38px);
+    line-height: 1.11;
+  }
+}
+
+h4 {
+  font-size: rem.convert(24px);
+  font-weight: 700;
+  line-height: 1.17;
+  margin-block-end: 10px;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(29px);
+    line-height: 1.14;
+    margin-block-end: 20px;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(32px);
+    line-height: 1.13;
+  }
+}
+
+h5 {
+  font-size: rem.convert(21px);
+  font-weight: 700;
+  line-height: 1.19;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(24px);
+    line-height: 1.17;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(26px);
+    line-height: 1.23;
+  }
+}
+
+h6 {
+  font-size: rem.convert(18px);
+  font-weight: 700;
+  line-height: 1.33;
+
+  @include mq.mq(desktop) {
+    font-size: rem.convert(20px);
+    line-height: 1.2;
+  }
+
+  @include mq.mq(wide) {
+    font-size: rem.convert(24px);
+    line-height: 1.42;
+  }
 }
