--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,6 @@
-@use 'scss-reset/reset';
-@use 'core/breakpoints';
-@use 'core/colorpalette';
-@use 'core/variables';
-@use 'core/typography';
-@use 'core/global';
-
-@use 'components/button';
+@use "scss-reset/reset";
+@use "core/breakpoints";
+@use "core/colorpalette";
+@use "core/variables";
+@use "core/typography";
+@use "core/global";
