--- a/src/scss/modules/accordion.scss
+++ b/src/scss/modules/accordion.scss
@@ -1,5 +1,8 @@
 @use "../core/breakpoints";
-@use "sass-mq/mq";
+@use "sass-mq" as mq;
+@use "sass-rem" as rem;
+
+@use "../components/button";
 
 .accordion {
   margin-block: var(--module-spacing);
@@ -10,24 +13,6 @@
 
   @include mq.mq(desktop) {
     margin-block-end: 60px;
-  }
-}
-
-.accordion__title {
-  font-family: var(--primary-font);
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 1.13;
-  margin-block: 0 10px;
-  margin-inline: 0;
-
-  @include mq.mq(desktop) {
-    font-size: 40px;
-    line-height: 1.09;
-  }
-
-  @include mq.mq(wide) {
-    font-size: 44px;
   }
 }
 
@@ -97,8 +82,7 @@
 }
 
 .accordion__item-title {
-  font-family: var(--primary-font);
-  font-size: 18px;
+  font-size: rem.convert(18px);
   font-weight: 600;
   line-height: 1.78;
   margin: 0;
@@ -142,13 +126,11 @@
 }
 
 .accordion__item-content {
-  font-size: 18px;
-  line-height: 1.78;
-  padding-block: 2px 20px;
+  padding-block: 20px;
   padding-inline: 20px;
 
   @include mq.mq(desktop) {
-    padding-block: 28px 45px;
+    padding-block: 45px;
     padding-inline: 100px;
   }
 
@@ -161,7 +143,7 @@
       margin-block-start: 20px;
 
       @include mq.mq(desktop) {
-        margin-block-start: 60px;
+        margin-block-start: 30px;
       }
     }
   }
@@ -171,26 +153,6 @@
 
     .btn {
       margin: 10px;
-    }
-  }
-}
-
-.accordion__item-description {
-  h4 {
-    font-family: var(--primary-font);
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 1.19;
-    margin-block: 0 10px;
-    margin-inline: 0;
-
-    @include mq.mq(desktop) {
-      font-size: 19px;
-      line-height: 1.33;
-    }
-
-    @include mq.mq(wide) {
-      font-size: 24px;
     }
   }
 }
