--- a/src/scss/modules/accordion.scss
+++ b/src/scss/modules/accordion.scss
@@ -1,5 +1,4 @@
 @use "../core/breakpoints";
-@use "sass-mq" as mq;
 @use "sass-rem" as rem;
 
 @use "../components/button";
@@ -11,13 +10,13 @@
 .accordion__header {
   margin-block-end: 29px;
 
-  @include mq.mq(desktop) {
+  @include breakpoints.mq(desktop) {
     margin-block-end: 60px;
   }
 }
 
 .accordion__description {
-  @include mq.mq(desktop) {
+  @include breakpoints.mq(desktop) {
     max-inline-size: calc(66% - 51px);
   }
 }
@@ -28,7 +27,7 @@
   & + .accordion__item {
     margin-block-start: 20px;
 
-    @include mq.mq(desktop) {
+    @include breakpoints.mq(desktop) {
       margin-block-start: 30px;
     }
   }
@@ -51,7 +50,7 @@
   text-align: start;
   transition: background-color 0.2s ease-in-out;
 
-  @include mq.mq(desktop) {
+  @include breakpoints.mq(desktop) {
     block-size: 50px;
     padding-block: 0;
     padding-inline: 25px;
@@ -129,7 +128,7 @@
   padding-block: 20px;
   padding-inline: 20px;
 
-  @include mq.mq(desktop) {
+  @include breakpoints.mq(desktop) {
     padding-block: 45px;
     padding-inline: 100px;
   }
@@ -142,7 +141,7 @@
     & + .buttons-row {
       margin-block-start: 20px;
 
-      @include mq.mq(desktop) {
+      @include breakpoints.mq(desktop) {
         margin-block-start: 30px;
       }
     }
