--- a/.scaffold/templates/page.hbs
+++ b/.scaffold/templates/page.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {{>head title='Home page'}}
+  {{>head title='{{NameTitleCase}}'}}
 </head>
 <body>
   <!-- Header -->
@@ -9,7 +9,7 @@
 
   <!-- Main Content -->
   <main>
-    {{#with accordion}}{{> accordion}}{{/with}}
+
   </main>
 
   <!-- Footer -->
