--- a/src/html/modules/global/head.hbs
+++ b/src/html/modules/global/head.hbs
@@ -6,7 +6,7 @@
 
 {{#if showCss}}
   <link
-    href="https://fonts.googleapis.com/css?family=Questrial"
+    href="https://fonts.googleapis.com/css?family=Questrial&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="/{{publicPath}}css/styles.css" />
