Fix CLS problems

--- a/src/html/modules/accordion.hbs
+++ b/src/html/modules/accordion.hbs
@@ -1,4 +1,4 @@
-<div class="accordion container" data-module="accordion">
+<section class="accordion container" data-module="accordion">
   <div class="accordion__header">
     <h2 class="accordion__title">{{title}}</h2>
     <div class="rtf accordion__description">
@@ -33,4 +33,4 @@
       </div>
     {{/each}}
   </div>
-</div>
+</section>
