--- a/src/html/templates/home-page.hbs
+++ b/src/html/templates/home-page.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {{>head title='Home page'}}
+  {{>head title='Home page' showScripts=showScripts}}
 </head>
 <body>
   <!-- Header -->
@@ -13,6 +13,6 @@
   </main>
 
   <!-- Footer -->
-  {{>footer}}
+  {{>footer showScripts=showScripts}}
 </body>
 </html>
