Fix rendering block issues

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,4 @@
+// Include core styles
 @use "scss-reset/reset";
 @use "core/breakpoints";
 @use "core/colorpalette";
@@ -5,4 +6,7 @@
 @use "core/typography";
 @use "core/global";
 
+// Include components
 @use "components/button";
+
+// Include above the fold modules
