Add image minification and extra configurations

--- a/src/html/modules/global/scripts.hbs
+++ b/src/html/modules/global/scripts.hbs
@@ -1,1 +1,5 @@
-<script src="/{{publicPath}}scripts/main.bundle.js"></script>
+<link rel="stylesheet" href="/{{publicPath}}\{{ manifest['main.js'].css }}" />
+<script
+  type="module"
+  src="/{{publicPath}}\{{ manifest['main.js'].file }}"
+></script>
