--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -20,6 +20,10 @@
   transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out,
     color 0.2s ease-in-out;
 
+  &[disabled="true"] {
+    display: none;
+  }
+
   svg {
     block-size: 30px;
     inline-size: 30px;
