--- a/.scaffold/templates/module.hbs
+++ b/.scaffold/templates/module.hbs
@@ -1,3 +1,3 @@
-<section class="{{name}}" aria-label="{{NameTitleCase}}"{{jsplaceholder}}>
+<section class="{{name}}"{{jsplaceholder}}>
   <h2>{{NameTitleCase}}</h2>
 </section>
