--- a/src/scss/core/_colorpalette.scss
+++ b/src/scss/core/_colorpalette.scss
@@ -1,7 +1,7 @@
 :root {
   --focus: #5e9ed6;
   --white: #fff;
-  --primary: #06847b;
-  --primary-dark: #1e3f36;
-  --primary-light: #6f8f89;
+  --primary-gold: #ffb800;
+  --primary-purple: #6a2ff3;
+  --verndale-black: #1c1c1c;
 }
