--- a/src/html/modules/global/head.hbs
+++ b/src/html/modules/global/head.hbs
@@ -5,8 +5,10 @@
 <title>{{title}}</title>
 
 {{#if showCss}}
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css?family=Questrial&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Titillium+Web:wght@700&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="/{{publicPath}}css/styles.css" />
