--- a/src/scss/core/_typography.scss
+++ b/src/scss/core/_typography.scss
@@ -3,15 +3,21 @@
 @use "sass-rem" as rem;
 
 body {
-  font-family: var(--primary-font);
-  font-size: rem.convert(18px);
-  line-height: 1.78;
+  font-family: var(--secondary-font);
+  font-size: rem.convert(16px);
+  line-height: 1.63;
+
+  @include breakpoints.mq(wide) {
+    font-size: rem.convert(18px);
+    line-height: 1.56;
+  }
 }
 
 h1 {
-  font-size: rem.convert(34px);
+  font-family: var(--primary-font);
+  font-size: rem.convert(40px);
   font-weight: 700;
-  line-height: 1.12;
+  line-height: 1.15;
   margin-block-end: 20px;
 
   @include breakpoints.mq(tabletLandscape) {
@@ -21,12 +27,13 @@ h1 {
   }
 
   @include breakpoints.mq(wide) {
-    font-size: rem.convert(54px);
-    line-height: 1.07;
+    font-size: rem.convert(60px);
+    line-height: 0.97;
   }
 }
 
 h2 {
+  font-family: var(--primary-font);
   font-size: rem.convert(32px);
   font-weight: 700;
   line-height: 1.13;
@@ -45,6 +52,7 @@ h2 {
 }
 
 h3 {
+  font-family: var(--primary-font);
   font-size: rem.convert(28px);
   font-weight: 700;
   line-height: 1.14;
@@ -63,6 +71,7 @@ h3 {
 }
 
 h4 {
+  font-family: var(--primary-font);
   font-size: rem.convert(24px);
   font-weight: 700;
   line-height: 1.17;
@@ -81,6 +90,7 @@ h4 {
 }
 
 h5 {
+  font-family: var(--primary-font);
   font-size: rem.convert(21px);
   font-weight: 700;
   line-height: 1.19;
@@ -97,6 +107,7 @@ h5 {
 }
 
 h6 {
+  font-family: var(--primary-font);
   font-size: rem.convert(18px);
   font-weight: 700;
   line-height: 1.33;
