add initial support for svgsheet

--- a/src/html/modules/global/scripts.hbs
+++ b/src/html/modules/global/scripts.hbs
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="/{{publicPath}}\{{ manifest['main.js'].css }}" />
+<link
+  rel="stylesheet"
+  href="/{{publicPath}}\{{ manifest['main.js'].css }}"
+  type="text/css"
+/>
 <script
   type="module"
   src="/{{publicPath}}\{{ manifest['main.js'].file }}"
