Bootstrap like grid

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @use "core/variables";
 @use "core/typography";
 @use "core/global";
+@use "core/grid";
 
 // Include components
 @use "components/button";
