--- a/src/scss/core/_global.scss
+++ b/src/scss/core/_global.scss
@@ -1,8 +1,17 @@
-.container {
+.container,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl,
+.container-xxl {
   margin-block: 0;
   margin-inline: auto;
   max-inline-size: var(--container-max-width);
   padding-inline: var(--container-padding);
+}
+
+.container-fluid {
+  max-inline-size: 100%;
 }
 
 *:focus:not(.focus-visible),
