--- a/src/scss/core/_grid.scss
+++ b/src/scss/core/_grid.scss
@@ -14,6 +14,7 @@ $bs-breakpoints: (
 .row {
   display: flex;
   flex-wrap: wrap;
+  margin-inline: calc(var(--gutter-width) * -0.5);
 
   > * {
     inline-size: 100%;
@@ -23,10 +24,6 @@ $bs-breakpoints: (
 
   & + .row {
     margin-block-start: var(--gutter-width);
-  }
-
-  .row {
-    margin-inline-start: calc(var(--gutter-width) * -0.5);
   }
 }
 
@@ -56,7 +53,7 @@ $bs-breakpoints: (
 
   .col-#{$column} {
     flex: 0 0 auto;
-    inline-size: math.div($column, $grid-colum-count) * 100%;
+    inline-size: math.div(100%, $column);
   }
 }
 
