--- a/src/html/modules/mock-api.hbs
+++ b/src/html/modules/mock-api.hbs
@@ -1,5 +1,5 @@
 <section
-  class="container"
+  class="mock-api container"
   data-module="mockApi"
   data-endpoint="{{endpoint}}"
   data-heading="{{heading}}"
