--- a/src/html/modules/global/head.hbs
+++ b/src/html/modules/global/head.hbs
@@ -4,7 +4,7 @@
 
 <title>{{title}}</title>
 
-{{#if showCss}}
+{{#if docsView}}
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
