--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -6,13 +6,18 @@
   --container-max-width: 1840px;
   --container-padding: 20px;
   --module-spacing: 60px;
-  --gutter-width: 24px;
+  --gutter-width: 18px;
+
+  @include breakpoints.mq(tablet) {
+    --gutter-width: 24px;
+  }
 
   @include breakpoints.mq(tabletLandscape) {
     --container-padding: 80px;
     --module-spacing: 150px;
     --gutter-width: 36px;
   }
+
   @include breakpoints.mq(wide) {
     --container-padding: 120px;
     --gutter-width: 48px;
