Simplify config file

--- a/src/scss/modules/mock-api.scss
+++ b/src/scss/modules/mock-api.scss
@@ -25,8 +25,7 @@
       animation: loader-dual-ring 1.2s linear infinite;
       block-size: 64px;
       border: 6px solid var(--primary-gold);
-      border-color: var(--primary-gold) transparent var(--primary-purple)
-        transparent;
+      border-color: var(--primary-gold) transparent var(--primary-purple) transparent;
       border-radius: 50%;
       content: "";
       display: block;
